test/classes/initializers/errors/grandFieldInit.good
grandFieldInit.chpl:15: In initializer:
grandFieldInit.chpl:16: error: can't set value of field "x" from parent type before calling this.init() or super.init()
